Add no-store caching directive to index.html

--- a/index.html
+++ b/index.html
@@ -1463,7 +1463,7 @@ border-bottom: 1px solid #fcfcfc;
 
 });
 </script>
-<meta http-equiv="cache-control" content="private, max-age=0, no-cache" />
+<meta http-equiv="cache-control" content="max-age=0, no-cache, no-store" />
 
 <meta property="og:url" content="https://covid-algotracker.citizensandtech.org/" />
 <meta property="og:type" content="article" />
