--- a/index.html
+++ b/index.html
@@ -1463,7 +1463,7 @@ border-bottom: 1px solid #fcfcfc;
 
 });
 </script>
-<meta http-equiv="cache-control" content="max-age=0, no-cache, no-store" />
+<meta http-equiv="cache-control" content="max-age=0 no-cache no-store" />
 
 <meta property="og:url" content="https://covid-algotracker.citizensandtech.org/" />
 <meta property="og:type" content="article" />
@@ -1595,7 +1595,7 @@ strong.headline{background:#ea532444}
 <p>This report is based on 3 days of data up to the following snapshots:</p>
 <ul>
 <li>Last HOT snapshot: 2020-04-01 19:57:03</li>
-<li>Last TOP snapshot: 2020-04-01 19:57:11</li>
+<li>Last TOP snapshot: 2020-04-01 19:57:12</li>
 </ul>
 </div>
 <div id="how-we-identify-covid-19-posts" class="section level2">
